--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -8,18 +8,19 @@ build = "src/build.rs"
 
 [dependencies]
 log = "0.4"
-env_logger = "0.9"
+env_logger = "0.10.1"
 reqwest = "0.11"
-urlencoding = "1.1.1"
+urlencoding = "2.1.3"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
-tokio = { version = "1", features = ["full"] }
-tokio-tungstenite = "0.15"
+tokio = { version = "1.35.1", features = ["full"] }
+tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
 bytes = "1.5.0"
 protobuf-codegen = "3.3.0"
 protobuf = "3.3.0"
 protoc-bin-vendored = "3.0.0"
+url = "2.5.0"
 
 
 
