--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,12 +15,13 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 tokio = { version = "1.35.1", features = ["full"] }
-tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.16.0", features = ["native-tls"] }
 bytes = "1.5.0"
 protobuf-codegen = "3.3.0"
-protobuf = "3.3.0"
+protobuf = { version = "3.3.0", features = ["bytes"] }
 protoc-bin-vendored = "3.0.0"
 url = "2.5.0"
+tungstenite = "0.16.0"
 
 
 
