--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tiktoklive"
 version = "0.0.3"
-description = " "
+description = "A Rust library. Use it to receive live stream events such as comments and gifts in realtime from TikTok LIVE No credentials are required."
 homepage = "https://github.com/jwdeveloper/TikTokLiveRust"
 repository = "https://github.com/jwdeveloper/TikTokLiveRust"
 keywords = ["api", "stream", "tiktok", "live", "tiktok-live", ]
