--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,14 @@ serde_derive = "1.0"
 tokio = { version = "1.35.1", features = ["full"] }
 tokio-tungstenite = { version = "0.16.0", features = ["native-tls"] }
 bytes = "1.5.0"
+
 protobuf-codegen = "3.3.0"
-protobuf = { version = "3.3.0", features = ["bytes"] }
 protoc-bin-vendored = "3.0.0"
+protobuf = { version = "3.3.0", features = ["bytes"] }
+
 url = "2.5.0"
 tungstenite = "0.16.0"
 
-
+[build-dependencies]
+protobuf-codegen = "3.3.0"
+protoc-bin-vendored = "3.0.0"
